# deutsch_study

./: .gitignore  README.md  pyproject.toml
backend/: export_irregular_verbs_anki.py  import_driving_theory_pdf.py  import_irregular_verbs.py  normalize_tag_hierarchy.py  seed.py  seed_driving_theory.py  seed_finance_terms.py  seed_life_objects.py  seed_politics_terms.py  sync_noun_articles.py  tag_reflexive_verbs.py
backend/app/: db.py  main.py  models.py  schemas.py
data/: sample_import.csv  test.md
data/Goethe/: A1.json  A2.json  B1.json
data/anki/: irregular_verbs_anki.tsv
data/json_output/A1/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/json_output/A2/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/json_output/B1/: 246.json  247.json  248.json  249.json  250.json  251.json  252.json  253.json  254.json  255.json  256.json  257.json  258.json  259.json  260.json  261.json  262.json  263.json  264.json  265.json  266.json  267.json  268.json  269.json
docs/: 246.txt  b1-1.json  standard-format.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
tools/: import_all_json.py  import_goethe.py  ocr_b1.py  ocr_to_json.py  pipeline.py  test_dwds_api.py
(+19 files in other folders)
