[project]
name = "deutsche-study"
version = "0.1.0"
description = "German vocabulary organizer with CSV/OCR/LLM normalization workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
